--- a/Number DataType/index.html
+++ b/Number DataType/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numbers Data Type</title>
+    <title>Numbers Data Type & Operators</title>
 </head>
 <body>
-    <h1> Numbers Data Type & Arithmetic Operators</h1>
+    <h1> Numbers Data Type & Operators</h1>
     <p>Numbers had various Methods and Properties for better understanding go through MDN Documentation</p>
     <!-- Link to the JavaScript file -->
      <script src="script.js"></script>
