--- a/Functions/index.html
+++ b/Functions/index.html
@@ -6,7 +6,7 @@
     <title>Functions in JavaScript</title>
 </head>
 <body>
-    <h1>Functions:</h1> <br> <br>
+    <h1>Functions</h1> <br> <br>
     <p> A Functions are Reusable block of code that performs a specific task</p>
     <!-- Link to the JavaScript file -->
      <script src="script.js"></script>
